@@ -1,3 +1,8 @@
+2009-01-01  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>
+
+	* added module Fourier
+	* Detrend: OpenMP parallelization
+
 2009-12-23  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>
 
 	* remapcon, remaplaf: speed up by fast store of links
